# protocol-sol

./: .gitignore  Anchor.toml  CODEBASE_EXPLANATION.md  DESIGN.md  DOCS_GUIDE.md  FRONTEND_DEMO.md  MARKETPLACE_DEMO.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_DOCS.md  SETUP.md  deploy-programs.sh  package.json  run-local-test.sh
app/: .env.local  README.md  next.config.ts  package.json  tsconfig.json
app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/src/app/marketplace/: page.tsx
app/src/app/options/: page.tsx
app/src/hooks/: useAnchor.ts  useMarketplace.ts  useOptions.ts
app/src/lib/: anchorConfig.ts
docs/: IMPLEMENTATION_TRACKER.md  TICKET-SOL-OPT-001-greek-fi-compliance.md
programs/sol_option_protocol/: Cargo.toml
programs/sol_option_protocol/src/: errors.rs  lib.rs
programs/sol_option_protocol/src/instructions/: burn_paired.rs  create_series.rs  exercise.rs  mint_options.rs  mod.rs  option.rs  redeem.rs  redeem_consideration.rs
programs/sol_option_protocol/src/utils/: math.rs  mod.rs  pda.rs  validation.rs
programs/spl_marketplace/: Cargo.toml
programs/spl_marketplace/src/: errors.rs  lib.rs
programs/spl_marketplace/src/instructions/: cancel_order.rs  create_market.rs  fill_order.rs  mod.rs  place_order.rs
programs/spl_marketplace/src/state/: market.rs  order.rs
tests/: greek_fi_compliance.ts  integration_testnet.ts  local_test.ts  pda_isolation.ts  phase2_testnet.ts  phase3_testnet.ts  phase4_testnet.ts  phase5_testnet.ts  simple_test.ts  sol_option_protocol.ts  spl_marketplace_demo.ts  testnet_manual.ts
(+3 files in other folders)
