[package]
name = "sol_option_protocol"
version = "0.1.0"
description = "Fully collateralized American options protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_option_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = { version = "0.32.0", features = ["token_2022"] }
