[package]
name = "spl_marketplace"
version = "0.1.0"
description = "Generic SPL token marketplace with CLOB"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = { version = "0.32.0", features = ["token_2022"] }
